--- a/style.css
+++ b/style.css
@@ -64,6 +64,11 @@ div img {
   font-size: 3em;
 }
 
+.footer {
+  background-color: #241d49;
+  color: #fff;
+}
+
 /* Media queres */
 /* tables */
 @media only screen and (min-width: 480px) {
